--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "org.sonarqube" version "2.6.2"
     id 'org.springframework.boot' version '2.1.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.1.1'
+    id 'org.owasp.dependencycheck' version '5.2.2'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
     id 'findbugs'
     id 'jacoco'
@@ -136,11 +136,11 @@ springBoot {
     buildInfo()
 }
 
-/*dependencyCheck {
+dependencyCheck {
     failBuildOnCVSS = 0
     suppressionFile = 'dependency-check-suppressions.xml'
     format='ALL'
-}*/
+}
 
 def sonarExclusions = [
         '**/v1/**',
