PAY-2285: New Data Capture fields added for shortfall/surplus

--- a/api/src/main/resources/db/changelog/db.changelog-0.1.3.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.3.yaml
@@ -21,3 +21,14 @@ databaseChangeLog:
             initiallyDeferred: false
             referencedColumnNames: id
             referencedTableName: payment
+  - changeSet:
+      id: 1554989041418-3
+      author: ayan
+      failOnError: true
+      changes:
+        - sql:
+            splitStatements:
+            sql: >
+              ALTER TABLE payment_allocation RENAME COLUMN sending_email_address TO reason;
+              ALTER TABLE payment_allocation RENAME COLUMN receiving_email_address TO explanation;
+              ALTER TABLE payment_allocation ADD COLUMN user_name varchar(255);
