--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -70,7 +70,8 @@ fees.register.url=https://fees-register-api.platform.hmcts.net
 feature.payments.search=false
 feature.payments.service.callback=false
 feature.case.reference.validation=false
-
+feature.bulk.scan.payments.check=true
+feature.bulk.scan.payments.check.pay.bubble=true
 azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
