--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -108,6 +108,8 @@ feature.check.liberata.account.for.all.services=false
 feature.duplicate.payment.check=true
 
 feature.case.reference.validation=true
+feature.bulk.scan.payments.check=true
+feature.bulk.scan.payments.check.pay.bubble=true
 
 duplicate.payment.check.interval.in.minutes = 2
 
