PAY-2419:Payment AKS Migration

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=payment-api
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.datasource.url=jdbc:postgresql://localhost:5432/payment
-#spring.datasource.username=payment
-#spring.datasource.password=payment
-#spring.datasource.driver=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_NAME:payment}${POSTGRES_CONNECTION_OPTIONS:}
+spring.datasource.username=${POSTGRES_USERNAME:payment}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver=org.postgresql.Driver
 
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
