--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -17,6 +17,7 @@ spring:
         ccpay.liberata-keys-oauth2-client-secret: LIBERATA_OAUTH2_CLIENT_SECRET
         ccpay.liberata-keys-oauth2-username: LIBERATA_OAUTH2_USERNAME
         ccpay.liberata-keys-oauth2-password: LIBERATA_OAUTH2_PASSWORD
-        ccpay.api-POSTGRES-PASS: spring.datasource.password
+        ccpay.api-POSTGRES-PASS: POSTGRES_PASSWORD
         ccpay.core-case-data-api-url: CORE_CASE_DATA_API_URL
+        AppInsightsInstrumentationKey: azure.application-insights.instrumentation-key
 
