--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -1,12 +1,28 @@
-postgresql:
-  enabled: true
 java:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
+  aadIdentityName:
   environment:
+    POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
+    POSTGRES_NAME: "{{ .Values.postgresql.postgresqlDatabase}}"
+    POSTGRES_USERNAME: "{{ .Values.postgresql.postgresqlUsername}}"
+    POSTGRES_PASSWORD: "{{ .Values.postgresql.postgresqlPassword}}"
+    POSTGRES_CONNECTION_OPTIONS: "?sslmode=allow"
+
+    SPRING_LIQUIBASE_ENABLED: true
+    SPRING_CLOUD_PROPERTIESVOLUME_ENABLED: false
+
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
     CORE_CASE_DATA_API_URL: "http://ccd-data-store-api-aat.service.core-compute-aat.internal"
     AUTH_PROVIDER_SERVICE_CLIENT_BASEURL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
     AUTH_IDAM_CLIENT_BASEURL: "https://idam-api.aat.platform.hmcts.net"
+
+    postgresql:
+      postgresqlUsername: payment
+      postgresqlPassword: payment
+      postgresqlDatabase: payment
+
+postgresql:
+  enabled: true
