--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -2,6 +2,7 @@ java:
   image: hmctspublic.azurecr.io/payment/api:latest
   applicationPort: 8080
   ingressHost: payment-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+  aadIdentityName: ccpay
   keyVaults:
     "ccpay":
       resourceGroup: ccpay
