--- a/api/src/main/resources/db/changelog/db.changelog-0.1.3.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.3.yaml
@@ -32,3 +32,13 @@ databaseChangeLog:
               ALTER TABLE payment_allocation RENAME COLUMN sending_email_address TO reason;
               ALTER TABLE payment_allocation RENAME COLUMN receiving_email_address TO explanation;
               ALTER TABLE payment_allocation ADD COLUMN user_name varchar(255);
+  - changeSet:
+      id: 1554989041418-4
+      author: subroto
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: fee_amount
+                  type: numeric(19, 2)
+            tableName: fee
