--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -71,6 +71,7 @@ feature.payments.search=false
 feature.payments.service.callback=false
 feature.case.reference.validation=false
 
+azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
 
 payments.account.existing.account.number=PBA0082848
