--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -66,6 +66,7 @@ java:
     FEATURE_PAYMENTS_SEARCH: "true"
     FEATURE_SERVICE_CALLBACK: "true"
 
+    APPINSIGHTS_INSTRUMENTATIONKEY: fake-key
   keyVaults:
     "ccpay":
       resourceGroup: ccpay
