--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -21,7 +21,7 @@ java:
 
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
-
+    APPINSIGHTS_INSTRUMENTATIONKEY: fake-key
     postgresql:
       postgresqlUsername: payment
       postgresqlPassword: payment
