--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -80,6 +80,7 @@ java:
         - pci-pal-api-key
         - gov-pay-keys-reference
         - gov-pay-keys-cmc
+        - gov-pay-keys-cmc-claim-store
         - gov-pay-keys-divorce
         - gov-pay-keys-probate
         - liberata-keys-oauth2-client-id
