--- a/api/src/main/resources/bootstrap.yaml
+++ b/api/src/main/resources/bootstrap.yaml
@@ -4,21 +4,21 @@ spring:
       prefixed: false
       paths: /mnt/secrets/ccpay
       aliases:
-        sb-primary-connection-string: ASB_CONNECTION_STRING
-        pci-pal-account-id-cmc: PCI_PAL_ACCOUNT_ID_CMC
-        pci-pal-account-id-probate: PCI_PAL_ACCOUNT_ID_PROBATE
-        pci-pal-account-id-divorce: PCI_PAL_ACCOUNT_ID_DIVORCE
-        pci-pal-api-url: PCI_PAL_API_URL
-        pci-pal-api-key: PCI_PAL_API_KEY
+        sb-primary-connection-string: azure.servicebus.connection-string
+        pci-pal-account-id-cmc: pci-pal.account.id.cmc
+        pci-pal-account-id-probate: pci-pal.account.id.probate
+        pci-pal-account-id-divorce: pci-pal.account.id.divorce
+        pci-pal-api-url: pci-pal.api.url
+        pci-pal-api-key: pci-pal.api.key
         gov-pay-keys-reference: GOV_PAY_AUTH_KEY_REFERENCE
-        gov-pay-keys-cmc: GOV_PAY_AUTH_KEY_CMC
-        gov-pay-keys-divorce: GOV_PAY_AUTH_KEY_DIVORCE_FRONTEND
-        gov-pay-keys-probate: GOV_PAY_AUTH_KEY_PROBATE_FRONTEND
-        liberata-keys-oauth2-client-id: LIBERATA_OAUTH2_CLIENT_ID
-        liberata-keys-oauth2-client-secret: LIBERATA_OAUTH2_CLIENT_SECRET
-        liberata-keys-oauth2-username: LIBERATA_OAUTH2_USERNAME
-        liberata-keys-oauth2-password: LIBERATA_OAUTH2_PASSWORD
+        gov-pay-keys-cmc: gov.pay.auth.key.cmc
+        gov-pay-keys-cmc-claim-store: gov.pay.auth.key.cmc_claim_store
+        gov-pay-keys-divorce: gov.pay.auth.key.divorce_frontend
+        gov-pay-keys-probate: gov.pay.auth.key.probate_frontend
+        liberata-keys-oauth2-client-id: liberata.oauth2.client.id
+        liberata-keys-oauth2-client-secret: liberata.oauth2.client.secret
+        liberata-keys-oauth2-username: liberata.oauth2.username
+        liberata-keys-oauth2-password: liberata.oauth2.password
         api-POSTGRES-PASS: POSTGRES_PASSWORD
-        core-case-data-api-url: CORE_CASE_DATA_API_URL
+        core-case-data-api-url: core_case_data.api.url
         AppInsightsInstrumentationKey: azure.application-insights.instrumentation-key
-
