PAY-1900:Mutation testing exclude old tests

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -38,9 +38,6 @@ sonarqube {
     properties {
         property "sonar.pitest.mode", "reuseReport"
         property "sonar.pitest.reportsDirectory", "build/reports/pitest"
-        property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/professionalapi/configuration/**," +
-                "src/main/java/uk/gov/hmcts/reform/professionalapi/SystemDateProvider.java," +
-                "src/main/java/uk/gov/hmcts/reform/professionalapi/Application.java"
     }
 }
 
@@ -147,7 +144,7 @@ task functionalTest(type: Test, description: 'Runs the functional tests', group:
 
 pitest {
     targetClasses = ['uk.gov.hmcts.payment.api.*']
-    excludedClasses = ['uk.gov.hmcts.payment.api.v1',
+    excludedClasses = ['uk.gov.hmcts.payment.api.v1.*',
                        'uk.gov.hmcts.payment.api.configuration.*',
                        'uk.gov.hmcts.payment.api.dto.mapper.*',
                        'uk.gov.hmcts.payment.api.exception.*',
