Adding again due to build failure

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -69,12 +69,12 @@ dependencies {
   compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'0.25.1.RELEASE'
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
-  compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
+  compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.2'
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version:'2.9.2'
   compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.0'
   compile group: 'uk.gov.hmcts.reform', name: 'liquibase-core', version:'3.8.1'
-  compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.2.2'
+  compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.1.6'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
 
@@ -91,7 +91,7 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     compile group: 'org.springframework.retry', name: 'spring-retry'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:'2.2.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.2.0'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.2.0'
     compile group: 'com.netflix.feign', name: 'feign-jackson', version: '8.18.0'
