PAY-2601 : Toggle Feature Applied to Cancellation API

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -101,7 +101,7 @@ management.health.mail.enabled=false
 
 feature.payments.search=true
 feature.payments.service.callback=true
-
+feature.payments.cancel=true
 feature.credit.account.payment.liberata.check=true
 feature.check.liberata.account.for.all.services=false
 
