--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -69,6 +69,7 @@ azure.servicebus.topic-name=serviceCallbackTopic
 azure.servicebus.subscription-name=defaultServiceCallbackSubscription
 azure.servicebus.allow-telemetry=false
 feature.payments.service.callback=false
+feature.payments.cancel=true
 
 service.callback.url=https://payment-node-aat.azurewebsites.net/api/HttpTrigger1?code=d2sOqELbiSwkRpxtduieHlAuJYr8aUqjZpeSiUe6yzP7ESX4AOfboQ==
 
