--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -69,6 +69,7 @@ fees.register.url=https://fees-register-api.platform.hmcts.net
 
 feature.payments.search=false
 feature.payments.service.callback=false
+feature.payments.cancel=true
 feature.case.reference.validation=false
 feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
