PAY-2828:Added FPL configuration on AKS and Teraform

--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -58,6 +58,11 @@ java:
     PBA_DIVORCE_PAYMENTS_EMAIL_TO: "krishnakn00@gmail.com"
     PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE: "hi"
     PBA_DIVORCE_PAYMENTS_EMAIL_SUBJECT: "Docker Env Card Payments Reconciliation Report"
+    PBA_FPL_PAYMENTS_REPORT_SCHEDULER_ENABLED: "true"
+    PBA_FPL_PAYMENTS_EMAIL_FROM: "no-reply@reform.hmcts.net"
+    PBA_FPL_PAYMENTS_EMAIL_TO: "krishnakn00@gmail.com"
+    PBA_FPL_PAYMENTS_EMAIL_MESSAGE: "hi"
+    PBA_FPL_PAYMENTS_EMAIL_SUBJECT: "Docker Env Card Payments Reconciliation Report"
     SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
     SPRING_MAIL_PROPERTIES_MAIL_SMTP_SSL_TRUST: "*"
     SPRING_MAIL_PORT: "25"
