--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,11 @@ services:
       - PBA_DIVORCE_PAYMENTS_EMAIL_TO=pepito@grillo.com
       - PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE=hi
       - PBA_DIVORCE_PAYMENTS_EMAIL_SUBJECT=Docker Env Card Payments Reconciliation Report
+      - PBA_FPL_PAYMENTS_REPORT_SCHEDULER_ENABLED=true
+      - PBA_FPL_PAYMENTS_EMAIL_FROM=no-reply@reform.hmcts.net
+      - PBA_FPL_PAYMENTS_EMAIL_TO=pepito@grillo.com
+      - PBA_FPL_PAYMENTS_EMAIL_MESSAGE=hi
+      - PBA_FPL_PAYMENTS_EMAIL_SUBJECT=Docker Env Card Payments Reconciliation Report
       - REFORM_ENVIRONMENT=aat
       - REFORM_SERVICE_NAME=payment-api
       - REFORM_TEAM=cc
