PAY 2785 : Test Hystrix Command

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -129,7 +129,7 @@ azure.servicebus.allow-telemetry=false
 fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.net}
 
 # Disable Circuit Breaker (Hystrix)
-#spring.cloud.circuit.breaker.enabled=false
-#hystrix.command.default.circuitBreaker.enabled=false
+spring.cloud.circuit.breaker.enabled=true
+hystrix.command.default.circuitBreaker.enabled=true
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
