PAY 2785 : Test Hystrix Stream

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -101,7 +101,7 @@ card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
 #management.security.enabled=false
 
 management.endpoints.web.base-path=/
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,hystrix.stream,hystrix
 management.endpoint.health.show-details=always
 # disable mail health check
 management.health.mail.enabled=false
