PAY 2785 : Test Hystrix Stream - Reverted

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -101,7 +101,7 @@ card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
 #management.security.enabled=false
 
 management.endpoints.web.base-path=/
-management.endpoints.web.exposure.include=health,info,hystrix.stream,hystrix
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 # disable mail health check
 management.health.mail.enabled=false
@@ -129,7 +129,7 @@ azure.servicebus.allow-telemetry=false
 fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.net}
 
 # Disable Circuit Breaker (Hystrix)
-spring.cloud.circuit.breaker.enabled=true
-hystrix.command.default.circuitBreaker.enabled=true
+#spring.cloud.circuit.breaker.enabled=false
+#hystrix.command.default.circuitBreaker.enabled=false
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
