--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -101,12 +101,10 @@ management.health.mail.enabled=false
 
 feature.payments.search=true
 feature.payments.service.callback=true
-
+feature.payments.cancel=true
 feature.credit.account.payment.liberata.check=true
 feature.check.liberata.account.for.all.services=false
-
 feature.duplicate.payment.check=true
-
 feature.case.reference.validation=true
 feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
