--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -76,6 +76,7 @@ java:
         - pci-pal-account-id-cmc
         - pci-pal-account-id-probate
         - pci-pal-account-id-divorce
+        - pci-pal-account-id-fpl
         - pci-pal-api-url
         - pci-pal-api-key
         - gov-pay-keys-reference
