OpenIdConnect draft changes.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -45,6 +45,7 @@ trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,
 
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
