OpenIdConnect Draft changes

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -46,7 +46,9 @@ trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
+spring.security.oauth2.client.provider.oidc.issuer-uri = ${auth.idam.client.baseUrl}/o
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
 card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
