--- a/api/build.gradle
+++ b/api/build.gradle
@@ -60,16 +60,16 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-spring', version: javaLoggingVersion
   //compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
-    //compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
+    compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
     compile "org.springframework.security:spring-security-web"
     compile "org.springframework.security:spring-security-config"
     compile "org.springframework.boot:spring-boot-starter-oauth2-client"
     compile "org.springframework.security:spring-security-oauth2-resource-server"
-    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
+    //compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.10'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
 
-    //compile "org.springframework.security:spring-security-oauth2-jose:5.2.2.RELEASE"
+    compile "org.springframework.security:spring-security-oauth2-jose:5.2.2.RELEASE"
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'1.1.0'
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
