--- a/api/build.gradle
+++ b/api/build.gradle
@@ -58,7 +58,7 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-spring', version: javaLoggingVersion
-  //compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
+  compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
