--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -46,7 +46,7 @@ trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,
 
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
-idam.api.url=${IDAM_USER_URL:http://localhost:5000}
+idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
 spring.security.oauth2.client.provider.oidc.issuer-uri = ${idam.api.url}/o
 spring.security.oauth2.client.registration.oidc.client-id = internal
 spring.security.oauth2.client.registration.oidc.client-secret = internal
