OpenIdConnect Draft changes

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -46,13 +46,13 @@ trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,
 
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
-idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:http://localhost:5000}
+idam.api.url=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 spring.security.oauth2.client.provider.oidc.issuer-uri = ${idam.api.url}/o
 spring.security.oauth2.client.registration.oidc.client-id = internal
 spring.security.oauth2.client.registration.oidc.client-secret = internal
 oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
-idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:4502}
+idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
