--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -52,8 +52,14 @@ spring.security.oauth2.client.registration.oidc.client-id = internal
 spring.security.oauth2.client.registration.oidc.client-secret = internal
 oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
+
+
+# Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
+idam.s2s-auth.totp_secret=${DATA_STORE_IDAM_KEY:AAAAAAAAAAAAAAAB}
+idam.s2s-auth.microservice=ccpay_bubble
 idam.s2s-auth.url=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
+
 
 card.payments.report.startDate=${CARD_PAYMENTS_REPORT_START_DATE:#{null}}
 card.payments.report.endDate=${CARD_PAYMENTS_REPORT_END_DATE:#{null}}
