--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -124,3 +124,8 @@ fees.register.url=${FEES_REGISTER_URL:https://fees-register-api.platform.hmcts.n
 #hystrix.command.default.circuitBreaker.enabled=false
 
 callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES:0}
+
+
+
+# IDAM
+idam.s2s-auth.url=${S2S_URL:http://localhost:4502}
