Second Initial commit

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -129,3 +129,4 @@ callback.payments.cutoff.time.in.minutes=${CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINU
 
 # IDAM
 idam.s2s-auth.url=${S2S_URL:http://localhost:4502}
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
