--- a/api/build.gradle
+++ b/api/build.gradle
@@ -78,6 +78,17 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
 
+    // for open id connect
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
+    compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
+    compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
+    compile "org.springframework.security:spring-security-web"
+    compile "org.springframework.security:spring-security-config"
+    compile "org.springframework.boot:spring-boot-starter-oauth2-client"
+    compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    implementation "io.github.openfeign:feign-httpclient:10.7.0"
+    // for open id connect
+
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
