--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -41,6 +41,13 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # S2S trusted services
 
+# Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
+idam.s2s-auth.totp_secret=${DATA_STORE_IDAM_KEY:AAAAAAAAAAAAAAAB}
+idam.s2s-auth.microservice=ccd_data
+idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:4502}
+
+idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
+
 trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
 
 
