--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -53,6 +53,12 @@ pba.divorce.payments.email.to=${PBA_DIVORCE_PAYMENTS_EMAIL_TO:dummy@HMCTS.net}
 pba.divorce.payments.email.subject=${PBA_DIVORCE_PAYMENTS_EMAIL_SUBJECT:subject}
 pba.divorce.payments.email.message=${PBA_DIVORCE_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
 
+pba.fpl.payments.report.scheduler.enabled = ${PBA_FPL_PAYMENTS_REPORT_SCHEDULER_ENABLED:true}
+pba.fpl.payments.email.from=${PBA_FPL_PAYMENTS_EMAIL_FROM:dummy@gmail.com}
+pba.fpl.payments.email.to=${PBA_FPL_PAYMENTS_EMAIL_TO:dummy@gmail.com}
+pba.fpl.payments.email.subject=${PBA_FPL_PAYMENTS_EMAIL_SUBJECT:subject}
+pba.fpl.payments.email.message=${PBA_FPL_PAYMENTS_EMAIL_MESSAGE:Hi <br/><br/>Please find attached today's Payment by Account reconciliation report. <br/><br/>Regards <br/><br/>Payments team <br/><br/>}
+
 
 spring.mail.host=${SPRING_MAIL_HOST:mta.reform.hmcts.net}
 spring.mail.port=${SPRING_MAIL_PORT:25}
