Logs added for service type.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -43,8 +43,9 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 
 # Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
 idam.s2s-auth.totp_secret=${DATA_STORE_IDAM_KEY:AAAAAAAAAAAAAAAB}
-idam.s2s-auth.microservice=ccd_data
+idam.s2s-auth.microservice=ccpay_bubble
 idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:4502}
+idam.s2s-authorised.services=ccpay_bubble
 
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 
