--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
+        compile group: 'org.owasp.encoder', name: 'encoder', version: '1.2.2'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
             sourceSets {
                 main {
