--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -21,3 +21,10 @@ payments.account.fake.account.number=QWERTYUIOP
 gov.pay.url=https://publicapi.payments.service.gov.uk/v1/payments
 gov.pay.keys.cmc=${GOV_PAY_AUTH_KEY_CMC:abcdef123456abcdef123456}
 mock.callback.url.endpoint=${TEST_URL:http://payment-api-aat-staging.service.core-compute-aat.internal}/mock-api/serviceCallback
+
+# Added as part of OpenIdConnect
+
+s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
+s2s-auth.url=http://localhost:4502
+s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
+s2s-auth.microservice=ccpay_bubble
