--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -73,3 +73,11 @@ feature.payments.cancel=true
 service.callback.url=https://payment-node-aat.azurewebsites.net/api/HttpTrigger1?code=d2sOqELbiSwkRpxtduieHlAuJYr8aUqjZpeSiUe6yzP7ESX4AOfboQ==
 
 callback.payments.cutoff.time.in.minutes=0
+
+
+# Added as part of OpenIdConnect
+
+s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
+s2s-auth.url=http://localhost:4502
+s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
+s2s-auth.microservice=ccpay_bubble
