--- a/api/build.gradle
+++ b/api/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-oauth2-client"
     compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
+    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
+    implementation "io.github.openfeign:feign-httpclient:10.7.0"
+    //compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.0.0.RELEASE'
     // for open id connect
 
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
