--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -42,13 +42,12 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 # S2S trusted services
 
 # Required for the ServiceAuthorisationApi class in service-auth-provider-java-client library
-idam.s2s-auth.totp_secret=${DATA_STORE_IDAM_KEY:AAAAAAAAAAAAAAAB}
+idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=ccpay_bubble
 idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:23443}
 idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
-
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
-
+logging.level.org.springframework.security=DEBUG
 trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
 
 
