--- a/api/build.gradle
+++ b/api/build.gradle
@@ -55,9 +55,9 @@ dependencies {
   compile project(':payment-api-contract')
   compile project(':payment-model')
   compile project(':payment-reference-data')
-  compile group: 'uk.gov.hmcts.reform', name: 'java-logging', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform', name: 'java-logging-appinsights', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform', name: 'java-logging-spring', version: javaLoggingVersion
+  compile group: 'uk.gov.hmcts.reform', name: 'logging', version: javaLoggingVersion
+  compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
+  compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'1.1.0'
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
