Unwanted classes removed and properties added.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
     //compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.0.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+    //compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.2.2.RELEASE'
 
     // for open id connect
