--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -81,10 +81,10 @@ payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
 
 # OpenId Changes
-security.oauth2.client.provider.oidc.issuer-uri=http://localhost:5000/o
+spring.security.oauth2.client.provider.oidc.issuer-uri=http://localhost:5000/o
 # Dummy OIDC client required even we are not going to use
-security.oauth2.client.registration.oidc.client-id=internal
-security.oauth2.client.registration.oidc.client-secret=internal
+spring.security.oauth2.client.registration.oidc.client-id=internal
+spring.security.oauth2.client.registration.oidc.client-secret=internal
 oidc.audience-list=internal,paybubble
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=${IDAM_API_URL:http://localhost:5000}
@@ -92,3 +92,4 @@ s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, 
 s2s-auth.url=http://localhost:23443
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
+server.port=8000
