--- a/api/build.gradle
+++ b/api/build.gradle
@@ -82,17 +82,23 @@ dependencies {
     compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
-    compile "org.springframework.security:spring-security-web"
-    compile "org.springframework.security:spring-security-config"
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.2.2.RELEASE'
     compile "org.springframework.boot:spring-boot-starter-oauth2-client"
     compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    implementation "io.github.openfeign:feign-httpclient:10.7.0"
+    //implementation "io.github.openfeign:feign-httpclient:10.7.0"
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
     //compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.0.0.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
-    //compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.2.2.RELEASE'
+    compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
+
 
     // for open id connect
 
