--- a/api/build.gradle
+++ b/api/build.gradle
@@ -78,29 +78,27 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
 
-    // for open id connect
+    // Start of OpenId Connect. Few versions has been explicitly added as 5.2.2 due to lower spring boot version in payment-app.
     compile group: 'io.jsonwebtoken', name: 'jjwt', version:'0.9.1'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
+    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
+    implementation "io.github.openfeign:feign-httpclient:10.7.0"
     compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.2.2.RELEASE'
-    compile "org.springframework.boot:spring-boot-starter-oauth2-client"
-    compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
-    //implementation "io.github.openfeign:feign-httpclient:10.7.0"
-    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
-    implementation "io.github.openfeign:feign-httpclient:10.7.0"
-    //compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.0.0.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+    // End of OpenId Connect.
+
+    // Below JAR's are added as part of OpenId Connect due to lower spring boot version in payment-app.
+    // This should be removed once spring boot version is upgraded.
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.2.2.RELEASE'
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
+    // End of OpenId Connect.
 
-
-    // for open id connect
 
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
