--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -79,3 +79,5 @@ feature.payments.cancel=true
 service.callback.url=https://payment-node-aat.azurewebsites.net/api/HttpTrigger1?code=d2sOqELbiSwkRpxtduieHlAuJYr8aUqjZpeSiUe6yzP7ESX4AOfboQ==
 
 callback.payments.cutoff.time.in.minutes=0
+
+azure.application-insights.instrumentation-key=0000-0000-0000-0000
