--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.owasp.dependencycheck' version '5.2.4'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
-    id "com.github.ben-manes.versions" version "0.22.0"
     id 'findbugs'
     id 'jacoco'
 }
 
 def springBootVersion = '2.1.13.RELEASE'
-def springCloudVersion = 'Greenwich.SR5'
+def springCloudVersion = 'Finchley.SR2'
 
 allprojects {
     apply plugin: 'maven'
@@ -49,7 +48,6 @@ allprojects {
                 entry 'jackson-core'
                 entry 'jackson-databind'
             }
-            dependency('org.springframework.security.oauth:spring-security-oauth2:2.4.0.RELEASE')
         }
     }
 }
@@ -80,7 +78,15 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
-        compile group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.0'
+        compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.6.4') {
+            sourceSets {
+                main {
+                    java {
+                        exclude '**/CoreCaseDataClientAutoConfiguration.java'
+                    }
+                }
+            }
+        }
 
     }
 
