--- a/api/build.gradle
+++ b/api/build.gradle
@@ -60,13 +60,13 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version:'1.1.0'
-  compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
-  compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'0.25.1.RELEASE'
+  compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version:'1.0.4.RELEASE'
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
   compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
   compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
@@ -84,19 +84,17 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '1.3.1'
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
-    compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+    compile "org.springframework.security:spring-security-web"
+    compile "org.springframework.security:spring-security-config"
+    compile "org.springframework.boot:spring-boot-starter-oauth2-client"
+    compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
     // End of OpenId Connect.
 
-    // Below JAR's are added as part of OpenId Connect due to lower spring boot version in payment-app.
-    // This should be removed once spring boot version is upgraded.
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.2.2.RELEASE'
-    compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
+
+
+
+
     // End of OpenId Connect.
 
 
@@ -114,8 +112,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     compile group: 'org.springframework.retry', name: 'spring-retry'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:'2.2.1.RELEASE'
-    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.2.0'
-    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.2.0'
+    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
+    compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     compile group: 'com.netflix.feign', name: 'feign-jackson', version: '8.18.0'
     compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.3'
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.0.4'
