--- a/gov-pay-client/build.gradle
+++ b/gov-pay-client/build.gradle
@@ -1,7 +1,7 @@
 description = ''
 
 dependencies {
-    compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-context', version: '5.2.4.RELEASE'
     compile group: 'org.apache.httpcomponents', name: 'httpclient'
     compile group: 'com.netflix.hystrix', name: 'hystrix-javanica', version: '1.5.12'
     testCompile group: 'com.github.tomakehurst', name: 'wiremock'
