Configuration values added.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -45,9 +45,14 @@ trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,
 idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=ccpay_bubble
 idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:23443}
-idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp
+idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 logging.level.org.springframework.security=DEBUG
+spring.security.oauth2.client.provider.oidc.issuer-uri = ${IDAM_API_URL}/o
+spring.security.oauth2.client.registration.oidc.client-id = internal
+spring.security.oauth2.client.registration.oidc.client-secret = internal
+oidc.issuer = ${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
+
 
 auth.idam.client.baseUrl=${AUTH_IDAM_CLIENT_BASEURL:#{http://dummy.dummy.net}}
 auth.provider.service.client.baseUrl=${AUTH_PROVIDER_SERVICE_CLIENT_BASEURL:#{http://dummy.dummy.net}}
