--- a/api/src/functionalTest/resources/application-functional-tests.properties
+++ b/api/src/functionalTest/resources/application-functional-tests.properties
@@ -24,7 +24,6 @@ mock.callback.url.endpoint=${TEST_URL:http://payment-api-aat-staging.service.cor
 
 # Added as part of OpenIdConnect
 
-s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
-s2s-auth.url=http://localhost:4502
+s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
