--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -91,11 +91,10 @@ spring.security.oauth2.client.provider.oidc.issuer-uri=http://localhost:5000/o
 # Dummy OIDC client required even we are not going to use
 spring.security.oauth2.client.registration.oidc.client-id=internal
 spring.security.oauth2.client.registration.oidc.client-secret=internal
-oidc.audience-list=internal,paybubble
+oidc.audience-list=internal,paybubble,cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 idam.api.url=${IDAM_API_URL:http://localhost:5000}
-s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
-s2s-auth.url=http://localhost:23443
+s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
 server.port=8000
