--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -83,8 +83,10 @@ callback.payments.cutoff.time.in.minutes=0
 # Added as part of OpenIdConnect
 
 s2s-authorised.services=ccpay_bubble, cmc, bulk_scan_payment_processor, api_gw, probate_frontend, divorce_frontend, ccd_gw
-s2s-auth.url=http://localhost:4502
 s2s-auth.totp_secret=AAAAAAAAAAAAAAAC
 s2s-auth.microservice=ccpay_bubble
-
+idam.api.url=${IDAM_API_URL:http://localhost:5000}
+spring.security.oauth2.client.provider.oidc.issuer-uri=http://localhost:5000/o
+oidc.audience-list=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
+oidc.issuer=${OIDC_ISSUER:http://fr-am:8080/openam/oauth2/hmcts}
 azure.application-insights.instrumentation-key=0000-0000-0000-0000
