--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -23,7 +23,7 @@ java:
     PAYBUBBLE_HOME_URL: https://ccpay-bubble-frontend-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     CORE_CASE_DATA_API_URL: http://ccd-data-store-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     IDAM_S2S_URL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
-
+    OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-{{ .Values.global.environment }}.internal:8443/openam/oauth2/hmcts
 
     GOV_PAY_URL: "https://publicapi.payments.service.gov.uk/v1/payments"
     GOV_PAY_OPERATIONAL_SERVICES: "ccd_gw"
