Configuration values updated.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -87,7 +87,7 @@ payments.account.existing.account.number=PBA0082848
 payments.account.fake.account.number=QWERTYUIOP
 
 # OpenId Changes
-spring.security.oauth2.client.provider.oidc.issuer-uri=http://localhost:5000/o
+spring.security.oauth2.client.provider.oidc.issuer-uri=${IDAM_API_URL:http://localhost:5000}/o
 # Dummy OIDC client required even we are not going to use
 spring.security.oauth2.client.registration.oidc.client-id=internal
 spring.security.oauth2.client.registration.oidc.client-secret=internal
