Configuration values updated.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -44,7 +44,7 @@ gov.pay.operational_services=${GOV_PAY_OPERATIONAL_SERVICES:#{ccd_gw,api_gw}}
 trusted.s2s.service.names=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
 idam.s2s-auth.microservice=ccpay_bubble
-idam.s2s-auth.url=${IDAM_S2S_URL:http://localhost:23443}
+idam.s2s-auth.url=${IDAM_S2S_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
 idam.s2s-authorised.services=cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service
 idam.api.url=${IDAM_API_URL:https://idam-api.aat.platform.hmcts.net}
 logging.level.org.springframework.security=DEBUG
